Fixed spacing

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -19,3 +19,12 @@
 	    transition: all 0.3s ease-out;
 	}
 }
+
+#exp-title{
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.no-space{
+  margin: 0;
+}
